fix side spacing in all sections

--- a/src/Sections/HomeSection.module.scss
+++ b/src/Sections/HomeSection.module.scss
@@ -4,7 +4,7 @@
 	min-height: 100vh;
 	padding-top: 5rem;
 	text-align: center;
-	margin-inline: 5rem;
+	margin-inline: v.$side-spacing-mobile;
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
@@ -12,7 +12,7 @@
 	gap: 5rem;
 
 	@media (min-width: 1000px) {
-		margin-inline: 15rem;
+		margin-inline: v.$side-spacing-desktop;
 	}
 }
 
