--- a/src/_variables.scss
+++ b/src/_variables.scss
@@ -1,3 +1,6 @@
 $background-color: hsl(0 0% 85%);
 $primary-color: hsl(138 71% 62%);
 $secondary-color: hsl(318 71% 62%);
+
+$side-spacing-mobile: 2rem;
+$side-spacing-desktop: 15rem;
