--- a/src/components/NavBar/NavBar.module.scss
+++ b/src/components/NavBar/NavBar.module.scss
@@ -5,7 +5,7 @@
 	justify-content: space-between;
 	align-items: center;
 	min-height: 5vh;
-	padding-inline: 15rem;
+	padding-inline: v.$side-spacing-desktop;
 	position: fixed;
 	inset: 0 0 auto 0;
 	z-index: 100;
@@ -14,7 +14,7 @@
 
 	@media (max-width: 1000px) {
 		& {
-			padding-inline: 2rem;
+			padding-inline: v.$side-spacing-mobile;
 		}
 	}
 
@@ -35,7 +35,7 @@
 
 .navHeader {
 	width: min-content;
-	padding: 1em;
+	padding-block: 1em;
 	text-align: center;
 
 	.navHeaderLink {
